--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     -->
     <title>React App</title>
   </head>
+  <script src="https://kit.fontawesome.com/760bf1ae3e.js" crossorigin="anonymous"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
